--- a/Assignment_4/7.1 Snort in sniffer and packet logger modes.md
+++ b/Assignment_4/7.1 Snort in sniffer and packet logger modes.md
@@ -114,18 +114,14 @@ tcpdump -r snort.log.1683293851 -A
 
 **ASCII**
 
-- **ASCII format logs** are **easy to read and analyse** using text editors or command-line tools, and they can be easily searched, sorted, and filtered based on specific criteria. They are also **relatively small in size** compared to pcap files, making them easier to store and manage.
-  - Each log entry is represented as a single line of text that contains the date and time of the event, the source and destination IP addresses and ports, the protocol used, and other relevant information
-  - **Do not contain the payload of the network packets** that triggered the rule.
-  
+- **ASCII format logs** are **easy to read and analyse** using text editors or command-line tools, and they can be easily searched, sorted, and filtered based on specific criteria. 
+- The structure of the log file is different, for ASCII format log file, multiple folder of log file for each ip address were created.
 
 **PCAP**
 
-- **pcap format** is a binary format that stores Snort log data in a packet capture file. 
-  - Each log entry is represented as a captured network packet that contains all the information about the network activity, **including the packet payload**.
-  - Pcap files are ideal for analyzing network traffic using packet analysis tools such as Wireshark, tcpdump, or Snort itself.
-  -  They are also useful for replaying network traffic for testing or debugging purposes. 
-  - However, pcap files are generally **larger in size** compared to ASCII logs, making them more difficult to store and manage.
+- **pcap format** is a binary format that stores Snort log data in a packet capture file. Pcap files are ideal for analyzing network traffic using packet analysis tools such as Wireshark, tcpdump, or Snort itself.
+- all log file for different ip address was stored in the same file.
+- pcap format file usually have a smaller size.
 
 
 
