--- a/Assignment_4/7.2 Snort in intrusion detection mode.md
+++ b/Assignment_4/7.2 Snort in intrusion detection mode.md
@@ -16,7 +16,7 @@
 **Add rules to discover attacks**
 
 ```shell
-alert tcp any any -> $HOME_NET any (flags: PA; content:"/bin/sh"; msg:"/bin/sh message detected"; sid:100007)
+alert tcp any any -> $HOME_NET any (content:"/bin/sh"; msg:"/bin/sh message detected"; sid:100007)
 ```
 
 **check the alert**
@@ -39,7 +39,7 @@ In the suspect2 attack, the attacker seems to **inject the XMAS attack.** The XM
 **Add rules to discover attacks**
 
 ```SHELL
-alert tcp any any -> $HOME_NET any (flags: FPU; msg:"XMAS Attack Detected"; sid:100004;)
+alert tcp any any -> $HOME_NET any (flags: FPU; msg:"XMAS scan detected"; sid:100004)
 ```
 
 ​	![attack_2_rule](images/attack_2_rule.png)
@@ -66,7 +66,7 @@ In suspect3 attack, the attacker uses the "PUSH ACK" flag in combination with a 
 # Detect possible command execution over HTTP traffic
 var HTTP_PORTS 8080,80,443
 
-alert tcp any any -> $HOME_NET $HTTP_PORTS (flags: PA;content:"/c"; content:"/system32"; within:15; msg:"Possible Command Execution"; sid:100005)
+alert tcp any any -> $HOME_NET $HTTP_PORTS (content:"/system32/cmd.exe"; msg:"Possible Command Execution"; nocase; sid:100005)
 ```
 
 - `flags: PA`: This specifies that the rule will only match TCP packets with the PSH and ACK flags set. This is because the rule is looking for a specific sequence of bytes that might not appear until a TCP segment is complete and pushed.
@@ -97,8 +97,7 @@ alert tcp any any -> $HOME_NET $HTTP_PORTS (flags: PA;content:"/c"; content:"/sy
 **Add rules to discover attacks**
 
 ````shell
-
-alert tcp any any -> $HOME_NET $HTTP_PORTS (flags: PA; content:"0x"; content:"activat"; within:30; msg:"Potential bot activation detected";  nocase; sid:100006)
+alert tcp any any -> $HOME_NET any (content:"activating botz lol"; msg:"Potential bot activation detected"; nocase; sid:100006)
 ````
 
 ​	![attack_4_rule](images/attack_4_rule.png)
@@ -131,7 +130,7 @@ alert tcp any any -> $HOME_NET $HTTP_PORTS (flags: PA; content:"0x"; content:"ac
 
 We have observed from the wireshark logs that in suspect5 attack, the SYN (TCP synchronization) and **ECN** **(Explicit Congestion Notification)** flags are sent together repetitively to the destination from different IP addresses. This type of network attack can lead to a more sophisticated and impactful form of denial-of-service (DoS) attacks. Some potential impact of this attack can be 'amplification attack', and 'resource exhaustion'. From the literature review we found that it may require more sophisticated mitigation techniques as well as higher network capacity to handle the increased traffic and congestion notifications effectively.
 
-~~**Add rules to discover attacks**~~
+~~**Add rules to discover attacks (Wrong direction, SYN,ECN is not the problem)**~~
 
 ```shell
 alert tcp any any -> $HOME_NET any (flags: S; threshold: type limit, track by_src, count 10, seconds 1; msg:"Potential SYN flooding attack"; sid: 100008)
@@ -156,14 +155,33 @@ alert tcp any any -> $HOME_NET any (flags: S; threshold: type limit, track by_sr
 **Add rules to discover attacks - A second time**
 
 ```shell
-alert tcp !10.0.0.1/24 any -> $HOME any (msg:"illegal source ip address"; sid: 100009)
+alert tcp [172.16.0.1/12,192.168.0.1/16,10.0.0.1/8,!10.0.0.1/24] any ->  $HOME_NET any (msg:"illegal source ip address"; sid: 100009)
 ```
 
-![illegal_ip_address](images/illegal_ip_address.png)
+​	![illegal_ip_address](images/illegal_ip_address.png)
 
 ## 7.2.6 Conclusion - All the rules added
 
-![final_rules](images/final_rules.png)
+```shell
+# ATTACK 1
+alert tcp any any -> $HOME_NET any (content:"/bin/sh"; msg:"/bin/sh message detected"; sid:100007)
+
+# ATTACK 2
+alert tcp any any -> $HOME_NET any (flags: FPU; msg:"XMAS scan detected"; sid:100004)
+
+# ATTACK 3
+alert tcp any any -> $HOME_NET $HTTP_PORTS (content:"/system32/cmd.exe"; msg:"Possible Command Execution"; nocase; sid:100005)
+
+# ATTACK 4
+alert tcp any any -> $HOME_NET any (content:"activating botz lol"; msg:"Potential bot activation detected"; nocase; sid:100006)
+
+# ATTACK 5
+alert tcp [172.16.0.1/12,192.168.0.1/16,10.0.0.1/8,!10.0.0.1/24] any ->  $HOME_NET any (msg:"illegal source ip address"; sid: 100009)
+```
+
+
+
+![rule_final](images/rule_final.png)
 
 
 
